# SelfAdaptiveMano

./: .gitattributes  .gitignore  BUG.md  INSTALL.md  README.md  TODO.md  install.yml  installRabbitMQ.sh
doc/SoftwareDesign/: Architecture-P4.pptx  Architecture-SDNSwitch.pptx  SAM.pptx  design.pptx  ~$design.pptx
doc/SoftwareRequirements/: [0]Perspective.md  [1]User Requirement.md  [2]Software Requirements Specification (SRS).md
sam/: cloc.sh  clocWithTest.sh  tmp.pcap
sam/base/: acl.py  argParser.py  attributes.py  command.py  commandMaintainer.py  compatibility.py  databaseAgent.py  dhcpServer.py  direction.py  environmentSetter.py  exceptionProcessor.py  flow.py  lb.py  link.py  loggerConfigurator.py  messageAgent.py  monitorStatistic.py  msgAgentRPCConf.py  nat.py  p4NFUsage.py  path.py  pickleIO.py  rabbitMQConf.conf  rabbitMQSetter.py  rateLimiter.py  request.py  requestGenerator.py  routingMorphic.py  server.py  sfc.py  sfcConstant.py  sfcMatch.py  shellProcessor.py  slo.py  socketConverter.py  sshAgent.py  sshProcessor.py  switch.py  traffic.py  trafficEndPoint.py  (+5 more)
sam/dashboard/: dashboardInfoBaseMaintainer.py  install.md
sam/dispatcher/: argParser.py  config.py  dispatcher.py  orchestratorManager.py  test.sh
sam/measurement/: dcnInfoBaseMaintainer.py  linkInfoBaseMaintainer.py  mConfig.py  (+6 more)
sam/test/Testbed/replayLatency/pcapRewrite/src/: CMakeLists.txt  FindGFlags.cmake  global.h  main.cpp  networkHeader.h  parser.cpp  parser.h  pcapReader.cpp  pcapReader.h  pcapRewriter.cpp  pcapRewriter.h  pcapWriter.cpp  pcapWriter.h
src/: k8s.py  list_node.py
(+823 files in other folders)
